--- a/dash.css
+++ b/dash.css
@@ -211,3 +211,85 @@ body{
   }
 
   
+
+:root{
+    --backgroud: #55c395;
+    --text-blue:#155d8a;
+    --color-white:#fff;
+    --files-grey: #778791;
+}
+
+.container{
+    background-color: #e2e7eb;
+    width: 100%;
+    height: 97vh;
+    margin: 0 20px;
+    display: flex;
+    border-radius: 50px;  
+}
+
+/* container 01 ---------------------------------*/
+
+
+/* nav 01------------------------ */
+ 
+
+
+/* nav 02 ------------------------*/
+
+ 
+
+
+/* mycloud -------------------------*/
+
+ 
+
+/* button add --------------------------------*/
+
+
+
+/* my files ----------------------*/
+
+
+
+/* my files 02---------------- */
+
+
+
+/* -----------------container 02------------ */
+
+
+
+/* grid 01--------------------------------------- */
+
+
+
+/* grid 02 ------------------------------------------*/
+
+
+
+/* grid 03--------------------------------------- */
+
+
+
+/* grid 03 arquivos----------------------------------------*/
+
+
+
+/* barra de rolagem------------------------- */
+
+
+
+/* ---------------container 03---------------- */
+
+
+
+/* perfil------------------------------------ */
+
+
+
+/* porcentagens dos gb--------------------------------- */
+
+
+
+/* tipos de arquivos container 03--------------- */
